# real-estate-viewer

./: .dockerignore  .gitignore  Dockerfile.backend  Readme.md  alembic.ini  ideas.txt  main.py  pyproject.toml  test_server.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: publish.yml
db/: engine.py  ingestors.py  models.py
docs/superpowers/specs/: 2026-04-05-greene-county-arcgis-integration-design.md
frontend/: .dockerignore  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/public/: manifest.webmanifest  neighborhoods.geojson
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/components/: OwnerLink.tsx
frontend/src/components/charts/: MedianPriceTrend.tsx  NeighborhoodRankings.tsx  NeighborhoodTrends.tsx  PeriodToggle.tsx  PriceScatter.tsx  SeasonalHeatmap.tsx  TopBuyersSellers.tsx  TopOwners.tsx  TransactionVolume.tsx
frontend/src/components/filters/: FilterSidebar.tsx
frontend/src/components/kpi/: KpiCard.tsx
frontend/src/components/layout/: DashboardNav.tsx
frontend/src/components/map/: HoldingsMap.tsx  NeighborhoodChoropleth.tsx  PropertyMap.tsx
frontend/src/components/providers/: QueryProvider.tsx
frontend/src/components/tables/: DistressedSalesTable.tsx  FlipDetectionTable.tsx  FlipsTable.tsx  HoldingsTable.tsx  InvestorTables.tsx  StaleParcelsTable.tsx  TransactionTable.tsx
frontend/src/lib/api/: analytics.ts  client.ts  parcels.ts  transactions.ts
frontend/src/lib/data/: neighborhoodNames.json
frontend/src/lib/hooks/: useAnalytics.ts  (+2 more)
migrations/: env.py
migrations/versions/: 75924e2a2bb4_add_latitude_and_longitude_to_parcels.py  8d96f028d470_add_parcel_fk_to_transactions.py
scripts/: fetch_neighborhoods.py
services/: data_retrieval.py
src/: cli.py  dashboard.py  logging_config.py  main.py
src/db/: criteria.py  engine.py  ingestors.py  maintenance.py  models.py  sqlutil.py
src/services/: data_retrieval.py  geocoding.py  owner_names.py  populate.py
tests/: conftest.py  test_api.py  test_ingestors.py  test_owner_names.py
(+14 files in other folders)
