[tool.poetry]
name = "fastapi-project"
version = "0.1.0"
description = ""
authors = ["Nate <nrude93@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.2"}
requests = "^2.32.3"
sqlmodel = "^0.0.24"
asyncpg = "^0.30.0"
psycopg2 = "^2.9.10"
fastapi-filter = {extras = ["sqlalchemy"], version = "^2.0.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
