[project]
name = "real-estate-viewer"
version = "0.1.0"
description = "County real-estate transactions analysis: FastAPI backend + Next.js frontend"
readme = "Readme.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.17.2",
    "asyncpg>=0.30.0",
    "fastapi>=0.121.2",
    "fastapi-filter>=2.0.1",
    "greenlet>=3.2.4",
    "httpx>=0.28.1",
    "sqlmodel>=0.0.27",
    "typer>=0.20.0",
    "uvicorn>=0.38.0",
]

[tool.pytest.ini_options]
pythonpath = "src"
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "pytest-asyncio>=0.23",
    "ruff>=0.3.0",
]



[tool.ruff]
# Target Python 3.12 (matches your Dev Container)
target-version = "py312"

# Standard line length (100 is common for modern screens)
line-length = 100

[tool.ruff.lint]
# Enable specific rules:
# E = pycodestyle errors
# F = Pyflakes
# I = isort (Sorts imports automatically)
# B = flake8-bugbear (Catches common bugs)
# UP = pyupgrade (Upgrades old syntax to modern Python)
select = ["E", "F", "I", "B", "UP"]

# Ignore specific rules if they are too annoying
ignore = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Use double quotes for strings.
quote-style = "double"

# Indent with spaces, rather than tabs.
indent-style = "space"

# Respect magic trailing commas.
skip-magic-trailing-comma = false

# Automatically detect the appropriate line ending.
line-ending = "auto"
